# fare-engine

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml  package-lock.json  package.json  setup.sh
backend/: CLAUDE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_25_0001-001_initial_schema.py  2026_03_26_0002-001_add_scan_engine_tables.py  2026_03_31_0003-001_add_strike_segment.py
backend/app/: CLAUDE.md  config.py  dependencies.py  exceptions.py  main.py
backend/app/api/: CLAUDE.md  carriers.py  dump_candidates.py  health.py  ingestion.py  manual_inputs.py  patterns.py  scan_targets.py  validations.py
backend/app/db/: CLAUDE.md  base.py  session.py
backend/app/models/: CLAUDE.md  __init__.py  carrier.py  community_post.py  dump_candidate.py  dump_pattern.py  enums.py  route.py  scan_target.py  validation_run.py  yq_schedule.py
backend/app/schemas/: CLAUDE.md  __init__.py  carrier.py  common.py  community_post.py  dump_candidate.py  dump_pattern.py  manual_input.py  route.py  scan_target.py  validation_run.py  yq_schedule.py
backend/app/services/: CLAUDE.md  alert_service.py  ingestion_service.py  pattern_service.py  scoring_service.py  validation_service.py  yq_service.py
backend/app/tasks/: CLAUDE.md  alert_tasks.py  celery_app.py  ingestion_tasks.py  schedules.py  validation_tasks.py  (+1 more)
backend/scripts/: CLAUDE.md  seed_carriers.py  seed_dump_candidates.py  seed_patterns.py  seed_patterns_old.py  seed_scan_targets.py
backend/seeds/: CLAUDE.md  carriers.json
backend/tests/: CLAUDE.md
(+112 files in other folders)
