[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fare-engine-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Config
    "pydantic-settings>=2.2.0",

    # Background jobs
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",

    # HTTP client (for scrapers)
    "httpx>=0.27.0",

    # Browser automation (Phase 04)
    "playwright>=1.43.0",

    # LLM integration (Phase 06)
    "anthropic>=0.25.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.4.0",
    "httpx>=0.27.0",   # for TestClient
    "factory-boy>=3.3.0",
    "freezegun>=1.4.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require network/browser)",
    "slow: marks tests as slow",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
